// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should have addon 1`] = `
<DocumentFragment>
  .c3 {
  font-size: .875rem;
  padding: 0 0.45rem;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  border-right: 0;
  border-bottom-left-radius: .125rem;
  border-top-left-radius: .125rem;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: currentcolor;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color;
  transition-property: background,border,color;
  background: #0553AC;
  border-color: #0553AC;
  color: #fff;
}

.c0 {
  overflow: hidden;
  position: relative;
  -webkit-tap-highlight-color: transparent;
}

.c0 .c5 {
  font-size: .875rem;
  padding: .45rem .9rem;
  padding-left: 0.45rem;
}

.c0 .c5 > :not(:last-child) {
  margin-right: 0.225rem;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  word-break: break-word;
  word-wrap: break-word;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c1,
.c1 .c5 {
  border-radius: .125rem;
}

.c1 .c5 {
  border-left: 0;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c1:active {
  outline: 0;
}

.c1 .c5 {
  background: #0665d0;
  border-color: #0665d0;
  color: #fff;
}

.c1:hover .c5 {
  background: #065DC0;
  border-color: #065DC0;
}

.c1:hover .c2 {
  background: #054D9F;
  border-color: #054D9F;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

<button
    class="c0 c1"
    overflow="hidden"
    shape="rectangle"
  >
    <div
      class="c2 c3 c4"
      shape="rectangle"
    >
      <span>
        Left Addon
      </span>
    </div>
    <span
      class="c5 c6"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> should have separated addon 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6 {
  overflow: hidden;
  position: relative;
  -webkit-tap-highlight-color: transparent;
  font-size: .875rem;
  padding: 0 0.45rem;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  border-left: 0;
  border-bottom-right-radius: .125rem;
  border-top-right-radius: .125rem;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  fill: currentcolor;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color;
  transition-property: background,border,color;
  background: #0553AC;
  border-color: #0553AC;
  color: #fff;
  cursor: default;
}

.c7:hover {
  background: #054D9F;
  border-color: #054D9F;
}

.c1 {
  overflow: hidden;
  position: relative;
  -webkit-tap-highlight-color: transparent;
}

.c1 .c3 {
  font-size: .875rem;
  padding: .45rem .9rem;
  padding-right: 0.45rem;
}

.c1 .c3 > :not(:last-child) {
  margin-right: 0.225rem;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  word-break: break-word;
  word-wrap: break-word;
}

.c2 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c2,
.c2 .c3 {
  border-radius: .125rem;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c2 .c3 {
  border-right: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c2:active {
  outline: 0;
}

.c2 .c3 {
  background: #0665d0;
  border-color: #0665d0;
  color: #fff;
}

.c2:hover .c3 {
  background: #065DC0;
  border-color: #065DC0;
}

.c2:hover .c5 {
  background: #054D9F;
  border-color: #054D9F;
}

<div
    class="c0"
    display="inline-flex"
  >
    <button
      class="c1 c2"
      overflow="hidden"
      shape="rectangle"
    >
      <span
        class="c3 c4"
      >
        Content
      </span>
    </button>
    <div
      class="c5 c6 c7"
      overflow="hidden"
      shape="rectangle"
    >
      Separated Right Addon
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Button /> should render component 1`] = `
<DocumentFragment>
  .c0 {
  overflow: hidden;
  position: relative;
  -webkit-tap-highlight-color: transparent;
}

.c0 .c2 {
  font-size: .875rem;
  padding: .45rem .9rem;
}

.c0 .c2 > :not(:last-child) {
  margin-right: 0.225rem;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px;
  box-sizing: border-box;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: currentcolor;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-transition: 300ms 0s ease-in-out;
  transition: 300ms 0s ease-in-out;
  -webkit-transition-property: background,border,color,fill;
  transition-property: background,border,color,fill;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  word-break: break-word;
  word-wrap: break-word;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: transparent;
  border: 0;
  font-family: inherit;
  position: relative;
  -webkit-transition: box-shadow 300ms 0s ease-in-out;
  transition: box-shadow 300ms 0s ease-in-out;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c1,
.c1 .c2 {
  border-radius: .125rem;
}

.c1:active {
  outline: 0;
}

.c1 .c2 {
  background: #0665d0;
  border-color: #0665d0;
  color: #fff;
}

.c1:hover .c2 {
  background: #065DC0;
  border-color: #065DC0;
}

.c1:focus {
  box-shadow: 0 0 0 .15rem rgba(6,101,208,0.5);
}

<button
    class="c0 c1"
    overflow="hidden"
    shape="rectangle"
  >
    <span
      class="c2 c3"
    >
      Content
    </span>
  </button>
</DocumentFragment>
`;
